# flashlog

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.claude/: settings.local.json
benches/: binaryser.rs  flashlog.rs  ftlog.rs  lazy_string.rs
example/: Cargo.toml
example/src/: main.rs
examples/defmt/: Cargo.toml
examples/defmt/src/: main.rs
examples/fast_log/: Cargo.toml
examples/fast_log/src/: main.rs
examples/fern/: Cargo.toml
examples/fern/src/: main.rs
examples/flashlog/: Cargo.toml
examples/flashlog/src/: main.rs
examples/ftlog/: Cargo.toml
examples/ftlog/src/: main.rs
examples/immediate_log/: Cargo.toml
examples/immediate_log/src/: main.rs
examples/modi-file/: Cargo.toml
examples/modi-file/src/: main.rs
examples/slog/: Cargo.toml
examples/slog/src/: main.rs
examples/tracing/: Cargo.toml
examples/tracing/src/: main.rs
flashlog/: Cargo.toml
flashlog/src/: lazy_string.rs  lib.rs
src/: compile_time.rs  lazy_string.rs  lib.rs  logger.rs  logger_v2.rs  rolling_file.rs  timer.rs
tests/: rolling_period_none.rs
