[package]
name = "flashlog"
version = "0.2.1"
edition = "2021"
authors = ["Junbeom Lee <junbeoml22@gmail.com>"]
description = "A fast logging library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JunbeomL22/flashlog"
keywords = ["Logging", "Fast", "Lazy"]

[[bench]]
name = "lazy_string"
harness = false


[lib]
name = "flashlog"
path = "src/lib.rs"

[dependencies]
quanta = "0.12"
once_cell = "1.20"
lazy_static = "1.4"
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing", "local-offset"] }
anyhow = "1.0"
criterion = "0.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
core_affinity = "0.8"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

[profile.release]
opt-level = 3

members = [
    "flashlog",
    "examples/*"
]