[package]
name = "flashlog"
version = "0.3.0"
edition = "2021"
authors = ["Junbeom Lee <junbeoml22@gmail.com>"]
description = "A fast logging library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JunbeomL22/flashlog"
keywords = ["Logging", "Fast", "Lazy"]

[[bench]]
name = "lazy_string"
harness = false


[lib]
name = "flashlog"
path = "src/lib.rs"

[dependencies]
quanta = "0.12"
once_cell = "1.0"
lazy_static = "1.4"
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing", "local-offset"] }
chrono = { version = "0.4", features = ["serde"] } 
chrono-tz = "0.10"
core_affinity = "0.8"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
flate2 = "1.0"

[dev-dependencies]
anyhow = "1.0"
criterion = "0.5"

[profile.release]
opt-level = 3

members = [
    "flashlog",
    "examples/*"
]

[features]
# Default max level when not specified
default = []

# Regular compile-time level filters (apply in all build profiles)
max_level_off = []
max_level_error = []
max_level_warn = []
max_level_info = []
max_level_debug = []
max_level_trace = []

# Release-specific compile-time level filters (only apply in release builds)
release_max_level_off = []
release_max_level_error = []
release_max_level_warn = []
release_max_level_info = []
release_max_level_debug = []
release_max_level_trace = []