[package]
name = "example-flashlog"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = true


[features]
arr = []
i32 = []
test = []

[dependencies]
flashlog = { version = "0.3.0", path = "../../", features = ["max-level-error"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
