[package]
name = "example-ftlog"
version = "0.1.0"
edition = "2021"
publish = false

[features]
arr = []
i32 = []


[dependencies]
anyhow = "1.0"
ftlog = "0.2"
log = "0.4"
flashlog = { version = "0.3", path = "../../" }
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing", "local-offset"] }
serde = { version = "1.0", features = ["derive"] }